# ScOPEPruebas

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  test.py
Examples/: model_usage.py  param_search_usage.py
Experiments/Clintox/: param_search_3.py  test.py
examples/compression/: compressors.py  matrix.py
examples/model/: model.py
examples/params/: optimize_auto.py  optimize_tpe.py
experiments/clintox/: param_search_3.py
src/scope/: __init__.py  model.py
src/scope/compression/: __init__.py  compressors.py  matrix.py  metrics.py
src/scope/ensemble/: __init__.py  metrics.py
src/scope/predictor/: __init__.py  base.py  ot.py  pd.py  registry.py
src/scope/predictor/distances/: __init__.py  linear.py  matching.py
src/scope/utils/: __init__.py  report_generation.py  sample_generation.py
src/scope/utils/optimize/: __init__.py  auto.py  base.py  bayessian.py  params.py
