[project]
name = "scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesus Alan Hernandez Galvan", email = "unlikeghost@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bitarray>=3.0.0",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.1",
    "optuna>=4.4.0",
    "pillow>=11.2.1",
    "pot>=0.9.5",
    "scikit-learn>=1.6.1",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
experiments = [
    "cmaes>=0.12.0",
    "deepchem>=2.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "optuna-dashboard>=0.19.0",
    "optunahub>=0.3.1",
    "pandas>=2.2.3",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
